--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "bookdata",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "jmwania",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/j23747/bookdata.git"
+  },
+  "bugs": {
+    "url": "https://github.com/j23747/bookdata/issues"
+  },
+  "homepage": "https://github.com/j23747/bookdata#readme",
+  "description": ""
 }
